# pulseMap_TiDB

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: classifier.py  graph.py  tools.py
backend/app/census/: cb_2024_us_tract_500k.dbf  cb_2024_us_tract_500k.shp  cb_2024_us_tract_500k.shp.ea.iso.xml  cb_2024_us_tract_500k.shp.iso.xml  cb_2024_us_tract_500k.shx
backend/app/config/: settings.py
backend/app/data/: db.py  geo.py  ingest.py  store.py
backend/app/db/: tidb.py
backend/app/routers/: chat.py  config.py  feeds.py  geo.py  reactions.py  reports.py  search.py  uploads.py
backend/app/services/: chat_agent.py  feeds.py  fetchers.py  reactions.py  reports.py  tracts.py
backend/app/types/: models.py
backend/scripts/: seed_tidb_from_sqlite.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  main.tsx  style.css
web/src/components/: ReportIcon.tsx
web/src/components/chat/: ChatPanel.tsx  TypingDots.tsx
web/src/components/map/: MapCanvas.tsx
web/src/components/map/controls/: LegendControl.tsx  MyLocationControl.tsx  SearchControl.tsx  SingleSelect.tsx
web/src/components/modals/: NearbyAlertModal.tsx
web/src/components/sidebar/: NearbyAlertsPanel.tsx  SelectedLocationCard.tsx  UpdatesPanel.tsx
web/src/hooks/: useChat.ts  useFeeds.ts  useNearbyQueue.ts  useProximityAlerts.ts  useSessionId.ts  useUpdates.ts
web/src/lib/: constants.ts  geo.ts  severity.ts  types.ts  utils.ts
(+4 files in other folders)
